Finished weather app project

--- a/JS - Weather App/public/index.html
+++ b/JS - Weather App/public/index.html
@@ -13,125 +13,9 @@
 </head>
 
 <body>
-    
-    <!-- <main>
-        <section id="weather-app">
-            <div class="container">
-
-                <form class="input">
-                    <input type="text" class="search" placeholder="Enter the city">
-                    <button type="submit" class="btn">Submit</button>
-                </form>
-
-                <div class="weather">
-                    <div class="w-1 day">
-                        <div class="header">
-                            <h1>Wed</h1>
-                        </div>
-                        <div class="main">
-                            <p>Cloudy</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>91°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-2 day">
-                        <div class="header">
-                            <h1>Thu</h1>
-                        </div>
-                        <div class="main">
-                            <p>Rain showers & thunder</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>88°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-3 day">
-                        <div class="header">
-                            <h1>Fri</h1>
-                        </div>
-                        <div class="main">
-                            <p>Sunny</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>88°</h1>
-                            <p>77°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-4 day">
-                        <div class="header">
-                            <h1>Sat</h1>
-                        </div>
-                        <div class="main">
-                            <p>Rain showers & thunder</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>88°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-5 day">
-                        <div class="header">
-                            <h1>Sun</h1>
-                        </div>
-                        <div class="main">
-                            <p>Sunny</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>90°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-6 day">
-                        <div class="header">
-                            <h1>Mon</h1>
-                        </div>
-                        <div class="main">
-                            <p>Cloudy</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>90°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                    <div class="w-7 day">
-                        <div class="header">
-                            <h1>Tue</h1>
-                        </div>
-                        <div class="main">
-                            <p>Rain showers & thunder</p>
-                        </div>
-                        <div class="celcius">
-                            <h1>86°</h1>
-                            <p>75°</p>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
-    </main> -->
-
-
-
-    <!-- ============================================================ -->
-
-
-
     <main>
-
         <section id="weather-app">
             <div class="container">
-
                 <div class="card">
 
                     <div class="search">
@@ -141,26 +25,26 @@
 
                     <div class="weather">
 
-                        <img src="../public/images/rainny.png" class="weather-icon" alt="">
-                        <div class="text">
-                            <h1 class="temp">22°C</h1>
-                            <h2 class="city">New York</h2>
+                        <img src="../public/images/sunny.png" class="weather-icon img" alt="">
+                        <div class="city-text">
+                            <h1 class="temp">... °C</h1>
+                            <h2 class="city">... City</h2>
                         </div>
 
                         <div class="details">
 
                             <div class="col">
-                                <img src="../public/images/humidity.png" alt="">
-                                <div>
-                                    <p class="humidity">50%</p>
+                                <img src="../public/images/humidity.png" class="img" alt="">
+                                <div class="humidity-text">
+                                    <p class="humidity">...%</p>
                                     <p>Humidity</p>
                                 </div>
                             </div>
 
                             <div class="col">
-                                <img src="../public/images/Wind.png" alt="">
-                                <div>
-                                    <p class="wind">15 km/h</p>
+                                <img src="../public/images/Wind.png" class="img" alt="">
+                                <div class="wind-text">
+                                    <p class="wind">... km/h</p>
                                     <p>Wind Speed</p>
                                 </div>
                             </div>
@@ -170,25 +54,9 @@
                     </div>
 
                 </div>
-
             </div>
         </section>
     </main>
-
-
-
-    <!-- ========================================================= -->
-
-
-
-    <!-- <div class="heading">FORECAST</div>
-    <div class="boxes">
-        <p class="day">SUN</p>
-        <p class="temperature">68</p>
-        <p class="icon"><i class="fa-solid fa-wind"></i></p>
-        <p class="weather"> Windy</p>
-    </div> -->
-
 </body>
 
 </html>
